syntax = "proto3";

// This directive gets ignored for Golang generated code, but other languages may need it
package packets;

// Compile to the pkg/packets folder and use "packets" as the go package
option go_package = "pkg/packets";

// PACKET TYPES
// Chat
message PublicMessage { string nickname = 1; string text = 2; } // Sent by client to communicate with other clients in the area
// Connection
message Handshake {} // Sent by server after client connects
message Heartbeat {} // Used to keep connection alive
// Authentication
message RequestGranted {} // Sent by server if request was successful
message RequestDenied { string reason = 1; } // Sent by server if request was unsuccessful
message LoginRequest { string username = 1; string password = 2; } // Sent by client to login
message RegisterRequest { // Sent by client to register
  string username = 1;
  string nickname = 2;
  string password = 3;
}
message LoginSuccess { string nickname = 1; } // Sent by the server after successful login
// Notifies
message ClientEntered { string nickname = 1; } // Sent by the client once his client is ready, broadcasted to everyone
message ClientLeft { uint64 id =1; string nickname = 2; } // Broadcast by the server if a client leaves
// Region
message JoinRegionRequest { uint64 region_id = 1; } // Sent by the client to request joining a new region
// Player
message SpawnPlayer {
  // Sent by the server to spawn a new player in the client
  uint64 id = 1;
  string name = 2;
  double x = 3;
  double y = 4;
  double z = 5;
  double rotation_y = 6;
  double velocity_x = 7;
  double velocity_y = 8;
  double velocity_z = 9;
  double speed = 10;
}
// Input velocity sent by the client (Y axis is vertical)
message PlayerVelocity { double velocity_x = 1; double velocity_y = 2; double velocity_z = 3;}

// Main Packet container
message Packet {
  uint64 sender_id = 1;
  oneof payload { // Generates a field called Payload of type isPacket_Payload interface
    // Chat
    PublicMessage public_message = 2; // Both
    // Connection
    Handshake handshake = 3; // Server
    Heartbeat heartbeat = 4; // Both
    // Authentication
    RequestGranted request_granted = 5; // Server
    RequestDenied request_denied = 6; // Server
    LoginRequest login_request = 7; // Client
    RegisterRequest register_request = 8; // Client
    LoginSuccess login_success = 9; // Server
    // Notifies
    ClientEntered client_entered = 10; // Both [Change this to be Server only!]
    ClientLeft client_left = 11; // Server
    // Region
    JoinRegionRequest join_region_request = 12; // Client
    // Player
    SpawnPlayer spawn_player = 13; // Server
    PlayerVelocity player_velocity = 14; // Both
  }
}